<resources>
    <string name="app_name">Notepad</string>
    <string name="one">花园</string>
    <string name="two">待办</string>
    <string name="thr">我的</string>
    <string name="action">开始</string>
    <string name="newday">新建待办</string>
    <string name="mouth">一月</string>
    <string name="day">2019</string>
    <string name="showday">日历</string>
    <string name="daibanname">待办名称</string>
    <string name="time2">确定时间</string>
    <string name="_120min">共120min</string>
    <string name="start_time">已进行</string>

    <string name="common">普通待办</string>
    <string name="count_down">计时待办</string>
    <string name="daibannames">待办名称:</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="common_hint">请输入内容</string>
    <string name="cancelled">已取消</string>
    <string name="cancneed_to_be_dealt_withelled">待办</string>

    <string name="two_start">开始</string>
    <string name="two_complete">完成</string>
    <string name="two_cancel">取消</string>
    <string name="two_continue">继续</string>

    <string name="two_time">已用时间</string>
</resources>