<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@drawable/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:text="@string/daibannames"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/common_hint"
            android:paddingLeft="8dp"
            android:textSize="14sp"
            android:background="@drawable/common_edit_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/shape5"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="@drawable/shape6"
            android:gravity="center"
            android:text="@string/complete" />

    </LinearLayout>

</LinearLayout>