<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:padding="10dp"
    android:id="@+id/tllibar"
    android:background="@color/nagvigation"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/mouth"
        android:text="@string/mouth"
        android:textSize="25sp"
        android:gravity="bottom|center"
        android:textColor="#000"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/years"
        android:text="@string/day"
        android:textSize="20sp"
        android:gravity="bottom|center"
        android:textColor="#000"
        android:paddingLeft="10dp"
        android:layout_toRightOf="@id/mouth"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:layout_toEndOf="@id/mouth"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/showCleardr"
        android:text="@string/showday"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" />

</RelativeLayout>