<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EFD5"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/time" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textColor="#707170"
                android:hint="@string/daibanname"
                android:textSize="30sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@mipmap/two_one_ic"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/two_time"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/time1"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:background="@drawable/shape7"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/time2"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/shape7"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/time3"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text=":"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/time4"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/shape7"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/time5"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/shape7"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/time6"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text=":"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/time7"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/shape7"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:text="0" />

                <TextView
                    android:id="@+id/time8"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/shape7"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text=" h "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="min"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="sec"/>

            </LinearLayout>


        </LinearLayout>

        <!-- 此处用的自定义xml seekbar   具体在SeekBar——color-->
        <com.example.myapplication.listpage.ProgressBarView
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#707170"
                android:text="@string/start_time" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="#707170"
                android:text="@string/_120min" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="#A1CBB7"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <Button
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="#E4E4E4"
            android:text="取消待办" />

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="#7FBAB7"
            android:text="完成待办" />

    </LinearLayout>

    <ImageView
        android:id="@+id/action"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/shape2"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:src="@mipmap/time" />

</RelativeLayout>